[metadata]
name = m1k-smu-client
version = 0.0.1
author = James Ball
description = TCP client to ADALM1000 SMU control library
long_description = file: README.md
classifiers =
    License :: OSI Approved :: GPL-3.0
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9    
project_urls =
    homepage = https://github.com/jmball/m1k-smu-client

[options]
packages = find:
python_requires = >=3.6
package_dir =
    =src

[options.packages.find]
where = src